--- a/_Imports.razor
+++ b/_Imports.razor
@@ -12,6 +12,6 @@
 
 @inject  IClienteServicescs clienteServices;
 @inject  IProductoServices productoServices;
-@inject  IProveedorServices prroveedorServices;
+@inject  IProveedorServices proveedorServices;
 @inject  IUsuarioServices usuarioServices;
 @inject  IVentaServices ventaServices;
