--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -15,8 +15,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="usuarios">
+                <span class="oi oi-people" aria-hidden="true"></span> Usuarios
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="clientes">
                 <span class="oi oi-people" aria-hidden="true"></span> Clientes
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="proveedores">
+                <span class="oi oi-people" aria-hidden="true"></span> Proveedores
             </NavLink>
         </div>
         <div class="nav-item px-3">
