--- a/_Imports.razor
+++ b/_Imports.razor
@@ -15,3 +15,5 @@
 @inject  IProveedorServices proveedorServices;
 @inject  IUsuarioServices usuarioServices;
 @inject  IVentaServices ventaServices;
+
+@inject NavigationManager navigator;
